feat: updated update endpoint
